Removing flickering behaviour when adding new breadcrumbs and fix issue with removing breadcrumbs after they overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,5 +7,6 @@
 
   .limiting-container {
     border: 1px solid red;
+    width: 80%;
   }
 }
